# Cooking-stream

./: .gitignore  README.md  pyproject.toml
lauzhack_obs/: CookiesCookingProfile.lp5  basic.ini  service.json
src/: control.py  control_pyaudio.py  control_win.py  main.py
